--- a/stilus.css
+++ b/stilus.css
@@ -16,3 +16,13 @@ h2{
     background-color: royalblue;
     padding: 1%;
 }
+.gombok{
+    text-align: center;
+}
+#egygomb{
+    width: 100%;
+    margin-bottom: 0.01px;
+}
+#kettogomb{
+    width: 100%;
+}
